--- a/front/my-app/src/Register.css
+++ b/front/my-app/src/Register.css
@@ -1,12 +1,60 @@
-/* Register.css */
 .register-container {
-    width: 300px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
+
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#myVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2; /* 保证在视频之上 */
+}
+
+.overlay-text {
+    color: white;
+    font-size: 4rem;
+    text-align: center;
+    margin-top: 40%;
+    font-weight: bold; /* 加粗字体 */
+}
+
+.register-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3; /* 确保在蒙层之上 */
+    background: rgba(255, 255, 255, 0.6); /* 设置为带透明度的白色背景 */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 30%;
+    max-width: 300px; /* 或根据需要调整 */
+    
+}
+
 
 .form-group {
     margin-bottom: 15px;
@@ -24,7 +72,7 @@
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #10a37f;
     color: white;
     cursor: pointer;
 }
@@ -36,3 +84,18 @@
 .checkbox-group {
     margin-bottom: 15px;
 }
+
+.login-link a {
+    color: #00B4D8;
+    text-decoration: none;
+    font-size: 14px;
+  }
+
+  .login-link {
+    position: relative; /* 增加相对定位 */
+    z-index: 20; /* 确保其z-index高于.video-overlay */
+    margin-top: 20px;
+    text-align: center; /* 如需居中 */
+    width: 100%; /* 如需在蒙层宽度内居中 */
+}
+
