--- a/front/my-app/src/index.css
+++ b/front/my-app/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden; /* 添加这个属性可以防止页面滚动 */
 }
 
 code {
