--- a/front/my-app/src/Navbar.css
+++ b/front/my-app/src/Navbar.css
@@ -87,3 +87,9 @@
     background-color: Pink; /* 鼠标悬停时背景变深粉红色 */
 }
 
+.button-group {
+    display: flex;
+    gap: 5px; /* 为按钮之间添加间隙 */
+    margin-right: 5%; /* 调整此值来向左移动按钮组 */
+}
+
